@@ -1,3 +1,4 @@
+* Add MultiSelection entry to Dict field
 * Allow empty order clause
 * Change editable tree attribute into boolean
 * Send default order to clients
